--- a/travis.yml
+++ b/travis.yml
@@ -1,10 +1,8 @@
 language: python
-python: 
-	- "3.7"
-
+python:
+  - "3.6"
 install:
-	- pip install -r requirements.txt
-
-script: 
-	- pytest
-
+  - pip install -r requirements.txt
+# command to run tests
+script:
+  - pytest
