--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,4 @@ install:
   - pip install -r requirements.txt
 # command to run tests
 script:
-  - python -m unittest discover -p "*_test.py"; fi
+  - python -m unittest discover -p "*_test.py"
