--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,9 @@ idna==2.8
 more-itertools==6.0.0
 pluggy==0.8.1
 py==1.7.0
+pytest==4.3.0
 python-coveralls==2.9.1
+python-datamuse==1.2.1
 PyYAML==3.13
 requests==2.21.0
 six==1.12.0
